<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBackground"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacing_lg">

        <!-- Logo -->
        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/ic_stash_logo_vector"
            android:contentDescription="@string/content_description_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/spacing_xxl" />

        <!-- Tagline -->
        <TextView
            android:id="@+id/tv_tagline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:textSize="@dimen/text_subtitle"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/spacing_md"
            app:layout_constraintTop_toBottomOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Username field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="@style/StashTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username"
            android:layout_marginTop="@dimen/spacing_xl"
            app:layout_constraintTop_toBottomOf="@id/tv_tagline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:imeOptions="actionNext" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/StashTextInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:layout_marginTop="@dimen/spacing_md"
            app:passwordToggleEnabled="true"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/til_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/StashButton.Primary"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:text="@string/btn_login"
            android:layout_marginTop="@dimen/spacing_lg"
            app:layout_constraintTop_toBottomOf="@id/til_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Register link -->
        <TextView
            android:id="@+id/tv_register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link_no_account"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_md"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="@dimen/spacing_md"
            android:paddingBottom="@dimen/spacing_xxl"
            android:layout_marginTop="@dimen/spacing_md"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
